[package]
name = "emacs-egui-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["glow"] }
lazy_static = "1.4"
console_error_panic_hook = "0.1"
